--- a/FinalProject/data608-final-project/src/app/app.component.scss
+++ b/FinalProject/data608-final-project/src/app/app.component.scss
@@ -57,6 +57,7 @@
     font-size: 2em;
     color: #de2d26;
     font-weight: 800;
+    font-family: 'Montserrat', 'Roboto', 'Arial', sans-serif;
   }
 
   .highlight {
