--- a/FinalProject/data608-final-project/src/app/app.component.scss
+++ b/FinalProject/data608-final-project/src/app/app.component.scss
@@ -24,7 +24,8 @@
     margin: 0 auto 2em auto;
     max-width: 700px;
     line-height: 2em;
-    font-size: 1.25em;
+    font-size: 1.15em;
+    padding: 1em;
   }
 
   .scenario-div {
@@ -76,6 +77,7 @@
   .svg-tempscale {
     display: flex;
     margin: 0.5em auto;
+    max-width: 450px;
   }
 
   .button-div {
@@ -98,3 +100,55 @@
     max-width: 400px;
   }
 
+
+.section-title {
+  text-align: center;
+  font-weight: 700;
+  font-family: 'Montserrat', 'Roboto', 'Arial', sans-serif;
+  padding: 1em;
+}
+
+.bar-graphics {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.top10-a2, .top10-b1 {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+.summary {
+  display: flex;
+  margin: 0 auto 1.5em auto;
+  max-width: 600px;
+  padding: 1em;   
+}
+
+.chart-title {
+  text-align: left;
+  font-weight: 500;
+  margin: 0 auto;
+  color: #666666;
+  max-width: 500px;
+  padding-left: 1em;
+}
+
+.country-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.line-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  max-width: 700px;
+}
+
+.x-axis {
+  padding-top: 1em;
+}
