--- a/FinalProject/data608-final-project/src/app/app.component.html
+++ b/FinalProject/data608-final-project/src/app/app.component.html
@@ -2,15 +2,26 @@
 <h1 class="page-title">Projected temperature warming <br/> in the 21st Century <br /> under two different worlds</h1>
 
 <div class="top-summary">
-  <p>This set of visualizations are based on temperature data derived from multiple global circulation models (GCMs), 
-  aggregated to the country level for months and years in four future time periods.  
-  The ensemble data depict the <strong>median</strong> range of model outputs run under each of two scenarios, "A2" and "B1".  
-  More data are available via the Climate Data API, documented at 
-  <a href="http://data.worldbank.org/developers/climate-data-api" target="_blank">http://data.worldbank.org/developers/climate-data-api</a>.</p>
-
+  <p>In 2000, as part of a groundbreaking effort, the <a href="https://www.ipcc.ch/" target="_blank">Intergovernmental Panel on Climate Change (IPCC)</a> released emission scenarios to be used for driving 
+    global circulation models (GCMs). The outputs from these GCMs gave scientists the ability to map possible climate change outcomes. From these developments, 
+    we can start to see the likely effects of policy action (or inaction) on global temperatures in the 21st century. This process is outlined in great detail in the <a href="https://www.ipcc.ch/site/assets/uploads/2018/03/sres-en.pdf" target="_blank">
+    IPCC Special Report.</a>
+  </p>
+  <p>The following set of visualizations utilize temperature data derived from two GCMs, 
+  aggregated to the country level for the four remaining, 20-year time intervals in the 21st century.  
+  The ensemble data depict the <strong class="strong-weight">median</strong> range of model outputs run under two different IPCC scenarios, "A2" and "B1",
+  and the change in temperature calculated for each month have been averaged per country across the four time periods.</p>
+  <p> For more information about the data used in this analysis, please visit the World Bank's data repository and
+    <a href="http://data.worldbank.org/developers/climate-data-api" target="_blank">Climate Data API</a>. Additionally, if you are interested in the code used to develop these visualizations, feel free to check it out on 
+    my <a href="https://github.com/zachalexander/data608_cuny/tree/master/FinalProject" target="_blank">Github</a>.</p>
 </div>
 
-
+<h2 class="section-title">Comparing the two models</h2>
+<p class="summary">The IPCC devised four diverging storylines for the way humans will handle climate change in the years to come. 
+  We examine two very different storylines below. By hitting the "play" button, you can examine
+  the predicted median changes in temperature (in &#176;F) for each country over the four remaining 20-year intervals of this century.
+  As you'll see, the temperatures fluctuate greatly based on which scenario chosen.
+</p>
 <div class="button-div">
   <button *ngIf="!scenarioAtwo" mat-stroked-button color="warn" (click)="scenarioA2()">Scenario A2</button>
   <button *ngIf="scenarioAtwo" mat-flat-button color="warn">Scenario A2</button>
@@ -24,8 +35,8 @@
     <ul class="conditions">
       <li>Rapid economic growth, but with rapid changes towards a service and information economy.</li>
       <li>Population rising to 9 billion in 2050 and then declining.</li>
-      <li>Reductions in material intensity and the introduction of clean and resource efficient technologies.</li>
-      <li>An emphasis on global solutions to economic, social and environmental stability.</li>
+      <li>Reductions in material intensity and the <strong class="highlight">introduction of clean</strong> and <strong class="highlight">resource efficient technologies</strong>.</li>
+      <li>An emphasis on <strong class="highlight">global solutions</strong> to <strong class="highlight">economic, social and environmental stability</strong>.</li>
     </ul>
   </small>
 </div>
@@ -34,16 +45,17 @@
   <small class="scenario-description">
     <p><strong class="highlight-scenario">Scenario A2</strong>: Models temperature predictions from a <strong class="highlight">more divided world </strong> based on:</p>
     <ul class="conditions">
-      <li>A world of independently operating, self-reliant nations.</li>
+      <li>A world of <strong class="highlight">independently operating, self-reliant nations</strong>.</li>
       <li>Continuously increasing population.</li>
       <li>Regionally oriented economic development.</li>
-      <li>High emissions.</li>
+      <li><strong class="highlight">High emissions</strong>.</li>
     </ul>
   </small>
 </div>
 
 
 <div id = 'title'>
+  <p class="summary">Examine the projected change in temperature by 2100 based on <strong class="highlight">{{this.scenario}}</strong>:</p>
   <button *ngIf=!play (click)="playButton()" mat-mini-fab color="warn" id="play" aria-label="Example icon button with a menu icon">
     <mat-icon>play_arrow</mat-icon>
   </button>
@@ -70,9 +82,33 @@
   </div>
 </div>
 
+<div class="mid-summary">
+  <p>From the model estimates above, as well as our projections of countries with the largest increases in temperature by 2100, 
+    we can clearly see that the two scenarios yield very different estimations. With a more integrated, ecologically friendly world,
+    the IPCC suspects that temperature increases globally will be substantially smaller. Additionally, the unequal warming of the planet,
+    which could be exacerbated by a more divided world, could be mitigated if more robust measures are put into place in the near future.
+  </p>
+</div>
+
 <div class="geopolitics">
   <h2 class="section-title">What a warming planet means for a few key nations</h2>
 
+  <div class="third-summary">
+    <p>We unfortunately are already seeing lasting effects of warming temperatures on crucial ecosystems and wildlife
+      across the globe. And, although this analysis does not cover the impact these effects are currently
+      having on millions of other species and habitats that cohabit the planet, humans will increasingly be impacted by 
+      these mass extinctions and alterations to our neighboring flora and fauna.  
+    </p>
+    <p>From an anthropological perspective, warming temperatures will start to weigh heavily on geo-political maneuvers
+      over the next half-century and will test the limits of the human ability to collaborate and evolve. A few nations listed below are likely to see large
+      increases in temperature in the next 80 years, and their current diplomatic position with the rest of the world may be a key 
+      driver in ultimately how far these temperatures swing in the 21st century. 
+    </p>
+  </div>
+
+  <p class="summary">Click on a nation below to read more about what large increases in temperature could mean for the rest of
+    the world:
+  </p>
   <div class="country-wrapper">
     <div class = "russia-map" (click)="scrollDiv(target)"></div>
     <div class = "canada-map" (click)="scrollDiv(target)"></div>
@@ -113,7 +149,7 @@
         <p>
           Other than potential land disputes with Canada and other neighbors in the Arctic, according to <a href="https://foreignpolicy.com/2020/10/05/climate-geopolitics-petrostates-russia-china/" target="_blank">sources</a> , Russia already holds a large share of the world's natural gas market, which could likely increase
           as moves towards more sustainable forms of energy start to take shape. Natural gas is more low-carbon than oil, and it can also be converted to other fuels such as hydrogen. With such a large share of gas reserves,
-          and potential shifts to increasing dominance of the energy grid in the years to come, diplomatic relations between Russia and the rest of the world will be paramount. Russia has already had run-ins with other
+          and strategic maneuvers to increase its dominance of the energy grid in the years to come, diplomatic relations between Russia and the rest of the world will be paramount. Russia has already had run-ins with other
           countries, including the United States, and this imbalance of resources could lead to further conflicts in the future.
         </p>
       </div>
@@ -128,9 +164,9 @@
         <p>
           According to <a href="https://www.nationalgeographic.com/science/2020/02/afghan-struggles-to-rebuild-climate-change-complicates/#:~:text=Afghanistan%20is%20one%20of%20the,Afghanistan%E2%80%94are%20set%20to%20worsen." target="_blank">National Geographic</a>
           Afghanistan is one of the most vulnerable countries in the world to climate change. Experts say drought, flood, avalanches, landslides, extreme weather, 
-          mass displacement, conflict, and child marriage—all of which already plague Afghanistan—are set to worsen. This'll likely affect the entire region and 
-          impact diplomatic relations across the globe. Although Afghanistan is highlighted here, other Middle Eastern countries are also likely to experience similar
-          challenges due to the unequal warming of our planet. This could lead to catastrophic shortages of food, water, and energy (including oil).
+          mass displacement, conflict, and child marriage—all of which already plague Afghanistan—are set to worsen in the coming decades. Although Afghanistan is highlighted here, other Middle Eastern countries are also likely to experience similar
+          challenges due to the unequal warming of our planet. This could lead to catastrophic shortages of food, water, and energy (particularly oil) that billions of people
+          depend on around the world.
         </p>
       </div>
       <div class = "us-div">
@@ -143,13 +179,17 @@
         </div>
         <p>
           As one of the leading emitters of carbon, the United States will undoubtedly be one of the major players in climate change geopolitics in the 21st century. However, 
-          from a diplomatic perspective, it will largely depend on federal leadership. With the Trump Administration's recent departure from the Paris Climate Agreement in 2017,
-          the nation has a lot of external relationships to reconcile in order to be viewed as a global leader in the effort. Will the United States seek to build ties with other
-          countries in an effort to build a more collaborative climate future? Or will there be more internal stalemates and partisanship on behalf of a more unified front to 
-          mitigate the effects of a warming planet.
-        </p>
+          from a diplomatic perspective, it will largely depend on the actions of the federal government. With the Trump Administration's recent departure from the Paris Climate Agreement in 2017,
+          the nation has to rebuild partnerships that have been fostered in previous administrations in order to be viewed as a global leader in the effort. Will the United States seek to build ties with other
+          countries to help create a more collaborative climate future? Or will there continue to be internal stalemates and partisanship around this issue?</p>
       </div>
     </div>
+  </div>
+
+  <div class="top-summary">
+    <p>We all have a moral responsibility to take care of our planet. These global circulation models hold key information to our climate future as a species.
+      Ultimately, the rate and degree of temperature shifts over the next 80 years will depend on our actions.
+    </p>
   </div>
 
 </div>
